# battery-testbench-simulator

./: README.md  pyproject.toml
configs/: bms_default.yaml  can_virtual.yaml  scenario_discharge.yaml  scenario_pulse.yaml  scenario_soc_drop_fault.yaml
docs/: architecture.md  status.md
scripts/: fit_tau.py  plot_bms_csv.py  quick_audit.py
src/battery_testbench_sim/: can_bus.py  config.py  logging_setup.py  main.py
src/battery_testbench_sim/faults/: fault_injector.py
src/battery_testbench_sim/infrastructure/: csv_logger.py  logging_setup.py
src/battery_testbench_sim/messages/: bms_status.py
src/battery_testbench_sim/models/: ocv.py  rc_model.py
src/battery_testbench_sim/nodes/: fake_bms.py  fake_vcu.py  verifier.py
src/battery_testbench_sim/providers/: pulse_provider.py  scenario_provider.py  static_provider.py
src/battery_testbench_sim/runtime/: supervisor.py
tests/: test_bms_status.py  test_can_bus.py  test_fake_bms.py  test_fake_vcu.py  test_fault_injector.py  test_fit_tau.py  test_logging_setup.py  test_plot_bms_csv.py  test_pulse_provider.py  test_runtime_outputs.py  test_scenario_provider.py  test_supervisor_runtime.py  test_verifier.py
